| Bug #51653 | InnoDB source: outdated reference to set-variable | ||
|---|---|---|---|
| Submitted: | 2 Mar 2010 19:18 | Modified: | 20 Jun 2010 1:05 |
| Reporter: | Paul DuBois | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: InnoDB storage engine | Severity: | S3 (Non-critical) |
| Version: | 5.1+ | OS: | Any |
| Assigned to: | Calvin Sun | CPU Architecture: | Any |
[2 Mar 2010 19:23]
MySQL Verification Team
Thank you for the bug report.
C:\build>type 5.1\storage\innobase\trx\trx0sys.c | findstr set-variable
"InnoDB: set-variable="
[2 Mar 2010 19:24]
Paul DuBois
See also WL#5154.
[24 Mar 2010 14:38]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/104214 3414 Sergey Vojtovich 2010-03-24 Applying InnoDB snapshot, fixes BUG#51653 Detailed revision comments: r6774 | calvin | 2010-03-03 23:56:10 +0200 (Wed, 03 Mar 2010) | 2 lines branches/5.1: fix bug#51653: outdated reference to set-variable Non functional change.
[24 Mar 2010 19:18]
Sergey Vojtovich
Fix for built-in queued into 5.1-bugteam (ss6860).
[26 Mar 2010 8:30]
Bugs System
Pushed into 6.0.14-alpha (revid:alik@sun.com-20100326081944-qja07qklw1p2w7jb) (version source revid:alik@sun.com-20100325073410-4t4i9gu2u1pge7xb) (merge vers: 6.0.14-alpha) (pib:16)
[6 Apr 2010 8:00]
Bugs System
Pushed into 5.1.46 (revid:sergey.glukhov@sun.com-20100405111026-7kz1p8qlzglqgfmu) (version source revid:svoj@sun.com-20100401151005-c6re90vdvutln15d) (merge vers: 5.1.46) (pib:16)
[6 Apr 2010 15:09]
Paul DuBois
Cosmetic change. No changelog entry needed.
[5 May 2010 15:23]
Bugs System
Pushed into 5.1.47 (revid:joro@sun.com-20100505145753-ivlt4hclbrjy8eye) (version source revid:vasil.dimov@oracle.com-20100331130613-8ja7n0vh36a80457) (merge vers: 5.1.46) (pib:16)
[28 May 2010 5:51]
Bugs System
Pushed into mysql-next-mr (revid:alik@sun.com-20100524190136-egaq7e8zgkwb9aqi) (version source revid:vasil.dimov@oracle.com-20100331130613-8ja7n0vh36a80457) (pib:16)
[28 May 2010 6:21]
Bugs System
Pushed into 6.0.14-alpha (revid:alik@sun.com-20100524190941-nuudpx60if25wsvx) (version source revid:vasil.dimov@oracle.com-20100331130613-8ja7n0vh36a80457) (merge vers: 5.1.46) (pib:16)
[28 May 2010 6:49]
Bugs System
Pushed into 5.5.5-m3 (revid:alik@sun.com-20100524185725-c8k5q7v60i5nix3t) (version source revid:vasil.dimov@oracle.com-20100331130613-8ja7n0vh36a80457) (merge vers: 5.1.46) (pib:16)
[29 May 2010 23:13]
Paul DuBois
No changelog entry needed.
[15 Jun 2010 8:21]
Bugs System
Pushed into 5.5.5-m3 (revid:alik@sun.com-20100615080459-smuswd9ooeywcxuc) (version source revid:mmakela@bk-internal.mysql.com-20100415070122-1nxji8ym4mao13ao) (merge vers: 5.1.47) (pib:16)
[15 Jun 2010 8:38]
Bugs System
Pushed into mysql-next-mr (revid:alik@sun.com-20100615080558-cw01bzdqr1bdmmec) (version source revid:mmakela@bk-internal.mysql.com-20100415070122-1nxji8ym4mao13ao) (pib:16)
[17 Jun 2010 11:52]
Bugs System
Pushed into 5.1.47-ndb-7.0.16 (revid:martin.skold@mysql.com-20100617114014-bva0dy24yyd67697) (version source revid:vasil.dimov@oracle.com-20100331130613-8ja7n0vh36a80457) (merge vers: 5.1.46) (pib:16)
[17 Jun 2010 12:30]
Bugs System
Pushed into 5.1.47-ndb-6.2.19 (revid:martin.skold@mysql.com-20100617115448-idrbic6gbki37h1c) (version source revid:vasil.dimov@oracle.com-20100331130613-8ja7n0vh36a80457) (merge vers: 5.1.46) (pib:16)
[17 Jun 2010 13:17]
Bugs System
Pushed into 5.1.47-ndb-6.3.35 (revid:martin.skold@mysql.com-20100617114611-61aqbb52j752y116) (version source revid:vasil.dimov@oracle.com-20100331130613-8ja7n0vh36a80457) (merge vers: 5.1.46) (pib:16)

Description: The --set-variable option has been deprecated since MySQL 4.0 (in favor of setting variables directly with options of the form --var_name=value). This option is being removed in Celosia. InnoDB source code still contains a reference to this outdated option and should be updated. This applies both to the built-in InnoDB and InnoDB Plugin. trx/trx0sys.c says: fprintf(stderr, "InnoDB: Also the page in the" " doublewrite buffer" " is corrupt.\n" "InnoDB: Cannot continue" " operation.\n" "InnoDB: You can try to" " recover the database" " with the my.cnf\n" "InnoDB: option:\n" "InnoDB: set-variable=" "innodb_force_recovery=6\n"); Please update this to: fprintf(stderr, "InnoDB: Also the page in the" " doublewrite buffer" " is corrupt.\n" "InnoDB: Cannot continue" " operation.\n" "InnoDB: You can try to" " recover the database" " with the my.cnf\n" "InnoDB: option:\n" "InnoDB: " "innodb_force_recovery=6\n"); How to repeat: By inspection.