branches/5.1: fix bug#51653: outdated reference to set-variable Non functional change.